gator_versioned_docs/version-0.9.0/index.md
---
title: Introduction to the MetaMask Delegation Toolkit
sidebar_label: Introduction
description: High-level overview of the Delegation Toolkit, its benefits, and where to start in the documentation.
sidebar_position: 1
---

import CardList from "@site/src/components/CardList"

# MetaMask Delegation Toolkit documentation

## Why use the toolkit?

The MetaMask Delegation Toolkit enables developers to create frictionless new experiences based
on granular permission sharing and trust.
The toolkit offers a suite of contracts, libraries, and services designed for maximum composability,
allowing developers to build and extend their dapps with ease.
The toolkit enables:

- **Instant user onboarding.** Provide frictionless onboarding with no browser extension, mobile
  app, or seed phrase required.

- **New web3 experiences.** Unlock new experiences such as peer-to-peer social
  coordination using incentive trees, or recurring subscription payments that don't require users
  to connect to the dapp.

- **Uninterrupted user experiences.** Keep users immersed in the dapp by embedding the wallet
  experience and reassigning gas costs to where they make sense.

The toolkit includes the [Delegation Framework](concepts/delegation.md#delegation-framework) – a
pioneering set of open-source, customizable smart contracts, allowing dapps and protocols to
implement custom permission control.
Developers can use the Delegation Framework to prepare their dapps for
[delegations](concepts/delegation.md) created from
[delegator accounts](concepts/delegator-accounts.md).

## Where do I start?

Check out the following sections to get started with the MetaMask Delegation Toolkit:

<CardList
  items={[
    {
      href: "get-started",
      title: "🏁 Get started",
      description: "If you're ready to get started building, install the Toolkit and follow a quickstart.",
    },
    {
      href: "how-to",
      title: "🛠️ How-to guides",
      description: "To complete specific tasks with the Delegation Toolkit, follow the how-to guides.",
    },
    {
      href: "concepts",
      title: "💭 Concepts",
      description: "If you're new to the Delegation Toolkit, learn about some key concepts.",
    }
  ]}
/>

## Questions?

If you have questions, email hellogators@consensys.net.
